# 3203-Project

./: .gitignore  README.md  compile_and_run_unit_tests.sh
Team25/Code25/src/integration_testing/: CMakeLists.txt
Team25/Code25/src/integration_testing/src/: FollowsStarSystemTest.cpp  FollowsSystemTest.cpp  ModifiesSystemTest.cpp  NextSystemTest.cpp  ParentStarSystemTest.cpp  ParentSystemTest.cpp  SingleSynonymWithoutClauseSystemTest.cpp  TestFrontEnd.cpp  TestFullSpaSystem.cpp  TestPkbQpsIntegration.cpp  TestSpPkbIntegration.cpp  UsesSystemTest.cpp
Team25/Code25/src/spa/: CMakeLists.txt
Team25/Code25/src/spa/src/: ConstantStore.cpp  ConstantStore.h  ExpressionParser.cpp  ExpressionParser.h  PKB.cpp  Parser.cpp  Parser.h  ProcedureStore.cpp  ProcedureStore.h  SourceProcessor.cpp  SourceProcessor.h  StatementStore.cpp  StatementStore.h  TNode.cpp  TNode.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  VariableStore.cpp  VariableStore.h
Team25/Code25/src/spa/src/PKB/: AbstractionStore.h  AttributeStore.cpp  AttributeStore.h  CFGStore.cpp  CFGStore.h  CallsStarStore.cpp  CallsStarStore.h  CallsStore.cpp  CallsStore.h  ConstantStore.cpp  ConstantStore.h  ContainCallsStore.cpp  ContainCallsStore.h  EntityInterface.h  EntityStore.cpp  EntityStore.h  EntityStoreTemp.h  FollowsStarStore.cpp  FollowsStarStore.h  FollowsStore.cpp  FollowsStore.h  ModifiesProcStore.cpp  ModifiesProcStore.h  ModifiesStore.cpp  ModifiesStore.h  NextStore.cpp  NextStore.h  ParentStarStore.cpp  ParentStarStore.h  ParentStore.cpp  ParentStore.h  PatternStore.cpp  PatternStore.h  PkbPopulator.cpp  PkbPopulator.h  PkbRetriever.cpp  PkbRetriever.h  ProcedureStore.cpp  ProcedureStore.h  StatementStore.cpp  (+8 more)
Team25/Code25/src/spa/src/QPS/: ParserResponse.cpp  ParserResponse.h  Qps.cpp  Qps.h  QpsTable.cpp  QpsTable.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryParser.cpp  QueryParser.h  QueryTokenizer.cpp  QueryTokenizer.h  ResultFormatter.cpp  ResultFormatter.h
Team25/Code25/src/spa/src/QPS/constants/: Clause.cpp  Clause.h  Constants.cpp  Constants.h  Entity.h  PatternValidator.cpp  PatternValidator.h  Relationship.cpp  Relationship.h  Synonym.cpp  Synonym.h  Value.cpp  Value.h  Wildcard.cpp  Wildcard.h
Team25/Code25/src/spa/src/QPS/constants/strategy/: AffectsStStrat.cpp  AffectsStStrat.h  AffectsStrat.cpp  AffectsStrat.h  CallsStStrat.cpp  CallsStStrat.h  CallsStrat.cpp  CallsStrat.h  ClauseStrat.cpp  ClauseStrat.h  FollowsStStrat.cpp  FollowsStStrat.h  FollowsStrat.cpp  FollowsStrat.h  ModStrat.cpp  ModStrat.h  NextStStrat.cpp  NextStStrat.h  NextStrat.cpp  NextStrat.h  ParentStStrat.cpp  ParentStStrat.h  ParentStrat.cpp  ParentStrat.h  PatternStrat.cpp  PatternStrat.h  UsesStrat.cpp  UsesStrat.h  WithStrat.cpp  WithStrat.h
Team25/Code25/src/spa/src/QPS/utils/: AttrUtils.cpp  AttrUtils.h  ParserUtils.cpp  ParserUtils.h  QueryUtils.cpp  QueryUtils.h  StringUtils.cpp  StringUtils.h
Team25/Code25/src/spa/src/SP/: CFGNode.cpp  CFGNode.h  DesignExtractor.cpp  DesignExtractor.h  ExpressionParser.cpp  ExpressionParser.h  Parser.cpp  Parser.h  ParserDTO.h  ParserUtils.cpp  ParserUtils.h  SPConstants.h  SPParserUtils.cpp  SPParserUtils.h  SPUtils.cpp  SPUtils.h  SelectiveExtractor.cpp  SelectiveExtractor.h  SourceProcessor.cpp  SourceProcessor.h  StmtParser.cpp  StmtParser.h  TNode.cpp  TNode.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Team25/Code25/src/spa/src/sp/: Parser.h  Tokenizer.cpp
Team25/Code25/src/unit_testing/: CMakeLists.txt
Team25/Code25/src/unit_testing/src/: TestAST.cpp  TestConstStore.cpp  TestDesignExtractor.cpp  TestEntityStore.cpp  TestExpressionParser.cpp  TestFollowsStar.cpp  TestFollowsStore.cpp  TestModifiesStore.cpp  TestParentStar.cpp  TestParentStore.cpp  TestParser.cpp  TestPkbPopulator.cpp  TestPkbRetriever.cpp  TestProcStore.cpp  TestQPS.cpp  TestQpsClause.cpp  TestQpsConstants.cpp  TestQpsFollowsClause.cpp  TestQpsFollowsStClause.cpp  TestQpsModifiesClauseResolve.cpp  TestQpsParentClause.cpp  TestQpsParentStClause.cpp  TestQpsPatternClauseResolve.cpp  TestQpsStringUtils.cpp  TestQpsSynonyms.cpp  TestQpsTable.cpp  TestQpsUsesClauseResolve.cpp  TestQpsValue.cpp  TestQpsWildcard.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp  TestQueryParserUtils.cpp  TestQueryTokenizer.cpp  TestSourceProcessor.cpp  TestStmtParser.cpp  TestStmtStore.cpp  TestTNode.cpp  TestTokenizer.cpp  TestUsesStore.cpp  TestVarStore.cpp
Team25/Code25/src/unit_testing/src/PKB/: TestAttributeStore.cpp  TestCFGStore.cpp  TestCallsStarStore.cpp  TestCallsStore.cpp  TestContainCallsStore.cpp  TestEntityStore.cpp  TestFollowsStar.cpp  TestFollowsStore.cpp  TestModifiesProcStore.cpp  TestModifiesStore.cpp  TestNextStore.cpp  TestParentStarStore.cpp  TestParentStore.cpp  TestPkbPopulator.cpp  TestPkbRetriever.cpp  TestStmtStore.cpp  TestUsesProcStore.cpp  TestUsesStore.cpp
Team25/Code25/src/unit_testing/src/QPS/: TestAttrUtils.cpp  TestQPS.cpp  TestQpsClause.cpp  TestQpsFollowsClause.cpp  TestQpsFollowsStClause.cpp  TestQpsModifiesClauseResolve.cpp  TestQpsParentClause.cpp  TestQpsPatternClauseResolve.cpp  TestQpsStringUtils.cpp  TestQpsUsesClauseResolve.cpp  TestQpsValue.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp
Team25/Code25/src/unit_testing/src/QPS/Constants/: TestQpsClause.cpp  TestQpsConstants.cpp  TestQpsSynonyms.cpp  TestQpsValue.cpp  TestQpsWildcard.cpp
Team25/Code25/src/unit_testing/src/QPS/Constants/ClauseResolve/: TestQpsCallsClause.cpp  TestQpsCallsStClause.cpp  TestQpsFollowsClause.cpp  TestQpsFollowsStClause.cpp  TestQpsModifiesClauseResolve.cpp  TestQpsParentClause.cpp  (+4 more)
Team25/Code25/src/unit_testing/src/QPS/Evaluator/: TestQpsTable.cpp  TestQueryEvaluator.cpp  TestResultFormatter.cpp
Team25/Code25/src/unit_testing/src/QPS/Parser/: TestParserResponse.cpp  TestQueryParser.cpp  TestQueryParserUtils.cpp
Team25/Code25/src/unit_testing/src/QPS/Tokenizer/: TestQueryTokenizer.cpp
Team25/Code25/src/unit_testing/src/SP/: TestCFGNode.cpp  TestDesignExtractor.cpp  TestExpressionParser.cpp  TestParser.cpp  TestSourceProcessor.cpp  TestStmtParser.cpp  TestTNode.cpp  TestTokenizer.cpp
(+97 files in other folders)
