file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_library(spa ${srcs} ${headers} 
"src/PKB/AbstractionStore.h"
"src/PKB/EntityStore.h"
"src/PKB/EntityStore.cpp"
"src/PKB/FollowsStarStore.cpp"
"src/PKB/FollowsStarStore.h"
"src/PKB/FollowsStore.cpp"
"src/PKB/FollowsStore.h"
"src/PKB/ModifiesProcStore.cpp"
"src/PKB/ModifiesProcStore.h"
"src/PKB/ModifiesStore.cpp"
"src/PKB/ModifiesStore.h"
"src/PKB/ParentStarStore.cpp"
"src/PKB/ParentStarStore.h"
"src/PKB/ParentStore.cpp"
"src/PKB/PatternStore.cpp"
"src/PKB/PatternStore.h"
"src/PKB/PkbPopulator.cpp"
"src/PKB/PkbPopulator.h"
"src/PKB/PkbRetriever.cpp"
"src/PKB/PkbRetriever.h"
"src/PKB/UsesStore.cpp"
"src/PKB/UsesStore.h"
"src/PKB/AbstractionStore.h" 
"src/PKB/UsesProcStore.h" 
"src/PKB/UsesProcStore.cpp" 
"src/QPS/ParserResponse.cpp"
"src/QPS/ParserResponse.h"
"src/QPS/Qps.cpp"
"src/QPS/Qps.h"
"src/QPS/QpsTable.cpp"
"src/QPS/QpsTable.h"
"src/QPS/QueryEvaluator.cpp"
"src/QPS/QueryEvaluator.h"
"src/QPS/QueryParser.cpp"
"src/QPS/QueryParser.h"
"src/QPS/QueryTokenizer.cpp"
"src/QPS/QueryTokenizer.h"
"src/QPS/constants/Clause.cpp"
"src/QPS/constants/Clause.h"
"src/QPS/constants/Constants.cpp"
"src/QPS/constants/Constants.h"
"src/QPS/constants/Entity.h"
"src/QPS/constants/Relationship.cpp"
"src/QPS/constants/Relationship.h"
"src/QPS/constants/Synonym.cpp"
"src/QPS/constants/Synonym.h"
"src/QPS/constants/Value.cpp"
"src/QPS/constants/Value.h"
"src/QPS/constants/Wildcard.cpp"
"src/QPS/constants/Wildcard.h"
"src/QPS/constants/strategy/UsesStrat.h" 
"src/QPS/constants/strategy/ClauseStrat.h" 
"src/QPS/constants/strategy/ClauseStrat.cpp" 
"src/QPS/constants/strategy/UsesStrat.cpp"
"src/QPS/constants/strategy/ModStrat.h" 
"src/QPS/constants/strategy/ModStrat.cpp" 
"src/QPS/constants/strategy/ParentStrat.h" 
"src/QPS/constants/strategy/ParentStrat.cpp" 
"src/QPS/constants/strategy/FollowsStrat.h" 
"src/QPS/constants/strategy/FollowsStrat.cpp" 
"src/QPS/constants/strategy/ParentStStrat.h" 
"src/QPS/constants/strategy/ParentStStrat.cpp" 
"src/QPS/constants/strategy/FollowsStStrat.h" 
"src/QPS/constants/strategy/FollowsStStrat.cpp" 
"src/QPS/constants/strategy/PatternStrat.h" 
"src/QPS/constants/strategy/PatternStrat.cpp"
"src/QPS/constants/strategy/CallsStrat.h" 
"src/QPS/constants/strategy/CallsStrat.cpp" 
"src/QPS/constants/strategy/CallsStStrat.cpp" 
"src/QPS/constants/strategy/CallsStStrat.h" 
"src/QPS/constants/strategy/NextStrat.h" 
"src/QPS/constants/strategy/NextStrat.cpp" 
"src/QPS/constants/strategy/NextStStrat.h" 
"src/QPS/constants/strategy/NextStStrat.cpp"
"src/QPS/utils/ParserUtils.cpp"
"src/QPS/utils/ParserUtils.h"
"src/QPS/utils/StringUtils.cpp"
"src/QPS/utils/StringUtils.h"
"src/SP/Tokenizer.cpp"
"src/SP/Tokenizer.h"
"src/SP/SourceProcessor.cpp"
"src/SP/SourceProcessor.h"
"src/SP/Token.cpp"
"src/SP/Token.h"
"src/SP/ExpressionParser.cpp"
"src/SP/ExpressionParser.h"
src/SP/Parser.cpp
src/SP/DesignExtractor.cpp
src/SP/TNode.cpp
src/SP/StmtParser.cpp
src/SP/StmtParser.h
src/SP/SPParserUtils.cpp
src/SP/SPParserUtils.h
src/SP/DesignExtractor.h
src/SP/SelectiveExtractor.cpp
src/SP/SelectiveExtractor.h
src/SP/SPConstants.h)

# this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)


