file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_executable(unit_testing ${srcs} 
"src/PKB/TestEntityStore.cpp"
"src/PKB/TestFollowsStar.cpp"
"src/PKB/TestFollowsStore.cpp"
"src/PKB/TestModifiesStore.cpp"
"src/PKB/TestParentStar.cpp"
"src/PKB/TestParentStore.cpp"
"src/PKB/TestPkbPopulator.cpp"
"src/PKB/TestPkbRetriever.cpp"
"src/PKB/TestStmtStore.cpp"
"src/PKB/TestUsesStore.cpp"
"src/QPS/TestQPS.cpp"
"src/QPS/TestQpsClause.cpp"
"src/QPS/TestQpsConstants.cpp"
"src/QPS/TestQpsFollowsClause.cpp"
"src/QPS/TestQpsFollowsStClause.cpp"
"src/QPS/TestQpsModifiesClauseResolve.cpp"
"src/QPS/TestQpsParentClause.cpp"
"src/QPS/TestQpsParentStClause.cpp"
"src/QPS/TestQpsPatternClauseResolve.cpp"
"src/QPS/TestQpsStringUtils.cpp"
"src/QPS/TestQpsSynonyms.cpp"
"src/QPS/TestQpsTable.cpp"
"src/QPS/TestQpsUsesClauseResolve.cpp"
"src/QPS/TestQpsValue.cpp"
"src/QPS/TestQpsWildcard.cpp"
"src/QPS/TestQueryEvaluator.cpp"
"src/QPS/TestQueryParser.cpp"
"src/QPS/TestQueryTokenizer.cpp"
"src/SP/TestDesignExtractor.cpp"
"src/SP/TestExpressionParser.cpp"
"src/SP/TestParser.cpp"
"src/SP/TestSourceProcessor.cpp"
"src/SP/TestStmtParser.cpp"
"src/SP/TestTNode.cpp"
"src/SP/TestTokenizer.cpp")

target_link_libraries(unit_testing spa)

